--- a/server/package.json
+++ b/server/package.json
@@ -19,13 +19,15 @@
     "exec": "npx tsc && node dist/server.js"
   },
   "dependencies": {
+    "@types/sequelize": "^4.28.20",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "sequelize-typescript": "^2.1.6"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
