--- a/client/package.json
+++ b/client/package.json
@@ -15,13 +15,10 @@
     "jwt-decode": "^4.0.0",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
-
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
-
-
-
+    "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
