--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "prettier": "^3.4.2",
     "typescript": "^5.7.2",
     "wait-on": "^7.2.0"
+  },
+  "dependencies": {
+    "express": "^4.21.2"
   }
 }
