--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "ESNext",
+    "target": "ES2018",
+    "module": "CommonJS",
     "rootDir": "./",
     "outDir": "./dist",
     "moduleResolution": "Node",
